// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should match the snapshot 1`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  Text
</button>
`;

exports[`Button component when center prop is set 1`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  display: block;
  margin-left: auto;
  margin-right: auto;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 iWWtg"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  Center
</button>
`;

exports[`Button component when full prop is set 1`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 eWJxdF"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  Full
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 1`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  primary
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 2`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #1355d0;
  color: #1355d0;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 dQxJno"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  secondary
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 3`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #de0059;
  border: 1px solid #de0059;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #ab0045;
  border-color: #ab0045;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 dUbHwH"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  action
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 4`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 hwCVvK"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  action
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 1`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>

  button
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 2`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="reset"
>

  reset
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 3`] = `
.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="submit"
>

  submit
</button>
`;

exports[`Button component with an icon should match secondary snapshot 1`] = `
.c2 {
  margin: -5px 5px -7px -5px;
}

.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c3 .c1 {
  font-size: 24px;
}

.c4 .c1 {
  font-size: 24px;
}

.c5 .c1 {
  font-size: 24px;
}

.c6 .c1 {
  font-size: 24px;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 isEXQZ"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    search
  </span>
  Search
</button>
`;

exports[`Button component with an icon should match secondary snapshot 2`] = `
.c2 {
  margin: -5px 5px -7px -5px;
}

.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c3 .c1 {
  font-size: 24px;
}

.c4 .c1 {
  font-size: 24px;
}

.c5 .c1 {
  font-size: 24px;
}

.c6 .c1 {
  font-size: 24px;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 isEXQZ"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    sync
  </span>
  Sync
</button>
`;

exports[`Button component with an icon should match secondary snapshot 3`] = `
.c2 {
  margin: -5px 5px -7px -5px;
}

.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c3 .c1 {
  font-size: 24px;
}

.c4 .c1 {
  font-size: 24px;
}

.c5 .c1 {
  font-size: 24px;
}

.c6 .c1 {
  font-size: 24px;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 isEXQZ"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    sms
  </span>
  Message
</button>
`;

exports[`Button component with an icon should match secondary snapshot 4`] = `
.c2 {
  margin: -5px 5px -7px -5px;
}

.c0 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c0 .c1 {
  font-size: 24px;
}

.c0:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c3 .c1 {
  font-size: 24px;
}

.c4 .c1 {
  font-size: 24px;
}

.c5 .c1 {
  font-size: 24px;
}

.c6 .c1 {
  font-size: 24px;
}

<button
  className="Button__StyledButton-sc-1ovnfsw-1 jDXnmX"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 isEXQZ"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    camera
  </span>
  Screenshot
</button>
`;
